--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
 {{>header}}
+<p>This application is created by Juned Ahmad.It uses mapbox.com and weatherstack.com.</p>
     <img class="portrait" src="./img/me.jpg" alt="">
     </div>
     {{>footer}}
